# src/External/WixApi/Generated/Contacts/V4/Contacts/Item/Labels/LabelsRequestBuilder.cs
@@ -1,0 +1,108 @@
+// <auto-generated/>
+#pragma warning disable CS0618
+using Microsoft.Kiota.Abstractions.Extensions;
+using Microsoft.Kiota.Abstractions.Serialization;
+using Microsoft.Kiota.Abstractions;
+using MyApi.Client.Contacts.V4.Contacts.Item.Labels.Item;
+using MyApi.Client.Models;
+using System.Collections.Generic;
+using System.IO;
+using System.Threading.Tasks;
+using System.Threading;
+using System;
+namespace MyApi.Client.Contacts.V4.Contacts.Item.Labels
+{
+    /// <summary>
+    /// Builds and executes requests for operations under \contacts\v4\contacts\{contactId}\labels
+    /// </summary>
+    [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
+    public partial class LabelsRequestBuilder : BaseRequestBuilder
+    {
+        /// <summary>Gets an item from the MyApi.Client.contacts.v4.contacts.item.labels.item collection</summary>
+        /// <param name="position">Label key</param>
+        /// <returns>A <see cref="global::MyApi.Client.Contacts.V4.Contacts.Item.Labels.Item.WithLabelKeyItemRequestBuilder"/></returns>
+        public global::MyApi.Client.Contacts.V4.Contacts.Item.Labels.Item.WithLabelKeyItemRequestBuilder this[string position]
+        {
+            get
+            {
+                var urlTplParams = new Dictionary<string, object>(PathParameters);
+                urlTplParams.Add("labelKey", position);
+                return new global::MyApi.Client.Contacts.V4.Contacts.Item.Labels.Item.WithLabelKeyItemRequestBuilder(urlTplParams, RequestAdapter);
+            }
+        }
+        /// <summary>
+        /// Instantiates a new <see cref="global::MyApi.Client.Contacts.V4.Contacts.Item.Labels.LabelsRequestBuilder"/> and sets the default values.
+        /// </summary>
+        /// <param name="pathParameters">Path parameters for the request</param>
+        /// <param name="requestAdapter">The request adapter to use to execute the requests.</param>
+        public LabelsRequestBuilder(Dictionary<string, object> pathParameters, IRequestAdapter requestAdapter) : base(requestAdapter, "{+baseurl}/contacts/v4/contacts/{contactId}/labels", pathParameters)
+        {
+        }
+        /// <summary>
+        /// Instantiates a new <see cref="global::MyApi.Client.Contacts.V4.Contacts.Item.Labels.LabelsRequestBuilder"/> and sets the default values.
+        /// </summary>
+        /// <param name="rawUrl">The raw URL to use for the request builder.</param>
+        /// <param name="requestAdapter">The request adapter to use to execute the requests.</param>
+        public LabelsRequestBuilder(string rawUrl, IRequestAdapter requestAdapter) : base(requestAdapter, "{+baseurl}/contacts/v4/contacts/{contactId}/labels", rawUrl)
+        {
+        }
+        /// <summary>
+        /// Adds one or more existing labels to a contact.
+        /// </summary>
+        /// <param name="body">The request body</param>
+        /// <param name="cancellationToken">Cancellation token to use when cancelling requests</param>
+        /// <param name="requestConfiguration">Configuration for the request such as headers, query parameters, and middleware options.</param>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public async Task PostAsync(global::MyApi.Client.Models.LabelContactRequest body, Action<RequestConfiguration<DefaultQueryParameters>>? requestConfiguration = default, CancellationToken cancellationToken = default)
+        {
+#nullable restore
+#else
+        public async Task PostAsync(global::MyApi.Client.Models.LabelContactRequest body, Action<RequestConfiguration<DefaultQueryParameters>> requestConfiguration = default, CancellationToken cancellationToken = default)
+        {
+#endif
+            _ = body ?? throw new ArgumentNullException(nameof(body));
+            var requestInfo = ToPostRequestInformation(body, requestConfiguration);
+            await RequestAdapter.SendNoContentAsync(requestInfo, default, cancellationToken).ConfigureAwait(false);
+        }
+        /// <summary>
+        /// Adds one or more existing labels to a contact.
+        /// </summary>
+        /// <returns>A <see cref="RequestInformation"/></returns>
+        /// <param name="body">The request body</param>
+        /// <param name="requestConfiguration">Configuration for the request such as headers, query parameters, and middleware options.</param>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public RequestInformation ToPostRequestInformation(global::MyApi.Client.Models.LabelContactRequest body, Action<RequestConfiguration<DefaultQueryParameters>>? requestConfiguration = default)
+        {
+#nullable restore
+#else
+        public RequestInformation ToPostRequestInformation(global::MyApi.Client.Models.LabelContactRequest body, Action<RequestConfiguration<DefaultQueryParameters>> requestConfiguration = default)
+        {
+#endif
+            _ = body ?? throw new ArgumentNullException(nameof(body));
+            var requestInfo = new RequestInformation(Method.POST, UrlTemplate, PathParameters);
+            requestInfo.Configure(requestConfiguration);
+            requestInfo.SetContentFromParsable(RequestAdapter, "application/json", body);
+            return requestInfo;
+        }
+        /// <summary>
+        /// Returns a request builder with the provided arbitrary URL. Using this method means any other path or query parameters are ignored.
+        /// </summary>
+        /// <returns>A <see cref="global::MyApi.Client.Contacts.V4.Contacts.Item.Labels.LabelsRequestBuilder"/></returns>
+        /// <param name="rawUrl">The raw URL to use for the request builder.</param>
+        public global::MyApi.Client.Contacts.V4.Contacts.Item.Labels.LabelsRequestBuilder WithUrl(string rawUrl)
+        {
+            return new global::MyApi.Client.Contacts.V4.Contacts.Item.Labels.LabelsRequestBuilder(rawUrl, RequestAdapter);
+        }
+        /// <summary>
+        /// Configuration for the request such as headers, query parameters, and middleware options.
+        /// </summary>
+        [Obsolete("This class is deprecated. Please use the generic RequestConfiguration class generated by the generator.")]
+        [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
+        public partial class LabelsRequestBuilderPostRequestConfiguration : RequestConfiguration<DefaultQueryParameters>
+        {
+        }
+    }
+}
+#pragma warning restore CS0618
