# src/External/WixApi/Mediator/Requests/GetContactLabelsRequest.cs
@@ -1,0 +1,10 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace WixApi.Mediator.Requests
+{
+    public record GetContactLabelsRequest(string ContactId) : IRequest<object>;
+}
